--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
 version: 2
 jobs:
-  build_jsnark:
+  build_jsnark_circuit_builder:
     docker:
       - image: circleci/openjdk:8-jdk-browsers
     steps:
@@ -25,6 +25,27 @@ jobs:
           paths:
             - bin
             - config.properties
+
+  build_jsnark_libsnark:
+    docker:
+      - image: appliedblockchain/libsnark-env
+    steps:
+      - checkout
+      - run:
+          name: Get jsnark
+          command: git submodule update --init --recursive jsnark
+      - run:
+          name: Prepare depends
+          command: |
+            cd jsnark/libsnark
+            ./prepare-depends.sh
+      - run:
+          name: make
+          command: |
+            cd jsnark/libsnark
+            make
+
+
   build_ethsnarks:
     docker:
       - image: appliedblockchain/libsnark-env
@@ -45,6 +66,10 @@ jobs:
           command: |
             cd ethsnarks/build
             make
+      - persist_to_workspace:
+          root: jsnark
+          paths:
+            - libsnark
 
   simple_example_jsnark:
     docker:
@@ -60,9 +85,11 @@ workflows:
   version: 2
   main:
     jobs:
-      - build_jsnark
+      - build_jsnark_circuit_builder
+      - build_jsnark_libsnark
       - build_ethsnarks
       - simple_example_jsnark:
           requires:
-            - build_jsnark
+            - build_jsnark_circuit_builder
+            - build_jsnark_libsnark
             - build_ethsnarks
